Fix issue with footer having too much padding on the bottom on pages without the info footer links

--- a/resources/onyx-screen.css
+++ b/resources/onyx-screen.css
@@ -309,7 +309,7 @@ pre {
 }
 
 #onyx-footerIcons-list {
-	margin:0;
+	margin:0 0 -15px 0;
 }
 
 .onyx-footerIcons-listItem {
